# rust-web-api

./: Cargo.toml  README.md
src/: database.rs  handler_macros.rs  handlers.rs  main.rs  models.rs
