[package]
name = "web_api"
version = "0.1.0"
edition = "2021"
authors = ["spayot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1"
router = "0.6.0"
logger = "0.4.0"
env_logger = "0.10.1"
serde = {version = "1.0.93", features = ["derive"]}
serde_json = "1.0.108"
chrono = {version = "0.4.31", features = ["serde"]}
uuid = {version = "1.6.1", features = ["v4", "serde"]}
